# Spora

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAEMON.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  com.spora.gateway.daemon.plist  docker-compose.yml  index.html  install-daemon.ps1  install.ps1  install.sh  latest.json  openrouter_models.numbers  package.json  spora-daemon.service  tailwind.config.ts
.github/workflows/: docker.yml
docs/: api.md  architecture.md  docker.md  getting-started.md  release-v0.1.3.md  security.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: analytics.rs  keys.rs  mod.rs  models.rs  settings.rs  updater.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/proxy/: middleware.rs  mod.rs  router.rs
src-tauri/src/proxy/adapters/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openrouter.rs
src/components/Analytics/: Analytics.tsx
src/components/Integrations/: IntegrationsTab.tsx
src/components/KeysWallet/: AddProviderKeyModal.tsx  CreateSporaKeyModal.tsx  EditProviderKeyModal.tsx  EditSporaKeyModal.tsx  KeysWallet.tsx  ModelSelector.tsx
src/components/Logs/: Logs.tsx
src/components/Settings/: SettingsTab.tsx
src/lib/: tauri.ts  types.ts
src/styles/: globals.css
