[package]
name = "spora"
version = "0.1.3"
edition = "2021"
default-run = "spora"

[lib]
name = "spora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spora"
path = "src/main.rs"

[[bin]]
name = "spora-daemon"
path = "src/bin/daemon.rs"

[dependencies]
# GUI-only dependencies (Tauri desktop app)
tauri = { version = "2", features = ["macos-private-api"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-os = { version = "2", optional = true }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }
# Core dependencies (always present — daemon + GUI)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
thiserror = "2"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[features]
# Default: full GUI desktop application
default = ["gui", "custom-protocol"]
# gui: enables all Tauri dependencies for the desktop app
gui = [
    "dep:tauri",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-process",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-os",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-global-shortcut",
    "dep:tauri-build",
]
# daemon: headless proxy only — no Tauri, no GUI, suitable for Docker/server
daemon = []
custom-protocol = ["tauri/custom-protocol"]
